workspace = { members = [ "http-resources", "thread_helper"] }
[package]
name = "backend_web_server"
version = "0.1.1"
edition = "2021"
authors = ["MSKatKing"]

[[bin]]
name = "backend_web_server"
path = "src/main.rs"



# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
http-resources = { version = "0.1.0", path = "http-resources" }
lazy_static = "1.4.0"
log = "0.4.20"
thread_helper = { version = "0.1.0", path = "thread_helper" }
